# AI-Deep-Researcher

./: pyproject.toml  report.md  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
api/: index.py
src/researcher/: app.py  crew.py  main.py  pdf_generator.py  streamlit_app.py
src/researcher/config/: agents.yaml  tasks.yaml
src/researcher/static/: index.html  script.js  style.css
src/researcher/tools/: custom_tool.py
