[project]
name = "researcher"
version = "0.1.0"
description = "researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "arxiv>=2.4.1",
    "crewai[google-genai,litellm,tools]==1.10.1",
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "mangum>=0.21.0",
    "markdown>=3.10.2",
    "markdown2>=2.5.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "xhtml2pdf>=0.2.17",
    "svglib==1.5.1",
]

[project.scripts]
researcher = "researcher.main:run"
run_crew = "researcher.main:run"
train = "researcher.main:train"
replay = "researcher.main:replay"
test = "researcher.main:test"
run_with_trigger = "researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
